[tool.poetry]
name = "99gpt-knowledgegraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.38"
llama-index-extractors-entity = "^0.1.2"
llama-index-embeddings-azure-openai = "^0.1.9"
llama-index-llms-azure-openai = "^0.1.8"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
streamlit = "^1.35.0"
nltk = "^3.8.1"
tiktoken = "^0.7.0"
neo4j = "^5.20.0"
llama-index-graph-stores-neo4j = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
